--- a/_data/single/theses/theses_daisy.yml
+++ b/_data/single/theses/theses_daisy.yml
@@ -1,3 +1,19 @@
+- id: ChristianSassi_M
+  author: ChristianSassi
+  type: M
+  title: "Design and Evaluation of a Federated Learning-Based Approach for Anomaly Detection in Industrial Control Systems"
+  institution: University of Trento
+  year: 2025
+  supervisor: RobertoDoriguzziCorin
+
+- id: PetrSabel_M
+  author: PetrSabel
+  type: M
+  title: "Federated Learning in Cybersecurity Challenges of Non-IID and Unbalanced Data"
+  institution: University of Trento
+  year: 2025
+  supervisor: RobertoDoriguzziCorin
+
 - id: NicolaLovo_B
   author: NicolaLovo
   type: B
@@ -29,16 +45,6 @@
   co-supervisor:
     - LuisAugustoDiasKnob
 
-- id: SimoneVigasio_B
-  author: SimoneVigasio
-  type: B
-  institution: University of Trento
-  year: 2024
-  title: "Evaluation of an AI Approach for Static Code Analysis Based on the VULBERTA Model"
-  supervisor: DomenicoSiracusa
-  co-supervisor:
-  - PietroDeMatteis
-
 - id: IrinaVoloshina_M
   author: IrinaVoloshina
   type: M
@@ -46,17 +52,6 @@
   institution: University of Trento
   year: 2024
   supervisor: RobertoDoriguzziCorin
-
-- id: MatteoBregola_B
-  author: MatteoBregola
-  type: B
-  title: Comprehensive Analysis of Breach and Attack Simulation Tools
-  year: 2024
-  supervisor: SilvioRanise
-  co-supervisor:
-    - PietroDeMatteis
-    - MatteoRizzi
-    - SalvatoreManfredi
 
 - id: GiacomoSegala_P
   author: GiacomoSegala
