Update from https://github.com/daisyfbk/daisyfbk.github.io/commit/e4e796e40a973eafa9eb9ea47e2f75b1d7aa31d5

--- a/_data/single/people/1_people_daisy.yml
+++ b/_data/single/people/1_people_daisy.yml
@@ -248,6 +248,12 @@
   email: apivotto@fbk.eu
   usernameFBK: apivotto
 
+- id: ChristianSassi
+  name: Christian
+  surname: Sassi
+  email: csassi@fbk.eu
+  usernameFBK: csassi
+
 - id: PetrSabel
   name: Petr
   surname: Sabel
