Update from https://github.com/daisyfbk/daisyfbk.github.io/commit/d7a6e83638a03052528bbdc7d09cf0392a0e9ee9

--- a/_data/single/people/1_people_daisy.yml
+++ b/_data/single/people/1_people_daisy.yml
@@ -1143,7 +1143,7 @@
 
 - id: I.Rodriguez
   name:  I.
-  surname: Rodriguez
+  surname: Rodríguez
 
 - id: I.T.Monroy
   name:  I. T.
@@ -1456,6 +1456,10 @@
 - id: LucianoPaschoalGaspary
   name:  Luciano
   surname: Paschoal Gaspary
+
+- id: LuisA.DiasKnob
+  name:  Luis A.
+  surname: Dias Knob
 
 - id: LukaszOgrodowczyk
   name:  Lukasz
