Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/aae7e7de72923240cb823c93ba5354cc5ab63a01

--- a/_data/single/people/1_people_aleph.yml
+++ b/_data/single/people/1_people_aleph.yml
@@ -61,7 +61,7 @@
   surname: Spadafora
   usernameFBK: cspadafora
 
-- id: ClaudioForoncelli
+- id: ClaudioForoncelli_BA
   name: Claudio
   surname: Foroncelli
   usernameFBK: cforoncelli
