Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/dc4389a0238b4148a0f3bd0fc36a7c1c02db0bfa

--- a/_data/single/members/members_aleph.yml
+++ b/_data/single/members/members_aleph.yml
@@ -99,7 +99,7 @@ former:
       thesisId: StefanoBerlato_PHD
       
     - personId: ChiaraSpadafora
-      thesisId: ChiaraSpadafora_PHD
+      thesisId: ChiaraSpadafora_PhD
   
   students:
     # 2 options:
